--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,8 +3,8 @@
     <div class="footer-top">
       <!-- Social Links -->
       <div class="footer-social">
-        <a href="https://www.linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/prakash770405" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/surya-prakash-singh-527844297" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/prakash770405/" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
 
