--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,7 +22,7 @@
 <body>
 
 <div class="nav-container">
-  <div class="logo">Surya Prakash Singh</div>
+  <div class="logo"><i class="fa-solid fa-briefcase"></i>&nbsp;&nbsp;&nbsp;&nbsp;Surya Prakash Singh</div>
   <i class="fas fa-bars" id="menu-toggle"></i>
   <ul class="nav-links" id="nav-links">
     <li><a href="/#about">About</a></li>
@@ -32,3 +32,4 @@
     <li><a href="/contact">Contact</a></li>
   </ul>
 </div>
+<hr class="logo">
